--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,40 +72,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'users': {'1': 0.914436204358203,\n",
-       "  '2': 0.9707606880751758,\n",
-       "  '3': 0.8894713278917453,\n",
-       "  '5': 0.8248919391559706,\n",
-       "  '6': 0.9501239233059968}}"
+       "{'users': {'1': 0.8938867087985268,\n",
+       "  '2': 0.8459091831900927,\n",
+       "  '3': 0.9191035676536818,\n",
+       "  '4': 0.8248919391559706,\n",
+       "  '6': 0.8622282441337686}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.get(\"http://localhost:5000/user/4/recommend\").json()"
+    "requests.get(\"http://localhost:5000/user/5/recommend\").json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'user_id': '1'}"
+       "{'user_id': '1', 'username': 'Monica'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,11 +130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'chat_id': 7}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "requests.get(\"http://localhost:5000/chat/create\").json()"
+    "requests.get(\"http://localhost:5000/chat/create?users_id=[2,3,4]\").json()"
    ]
   },
   {
