SRC introduced and changes in test

--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -9,21 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"friends.csv\")"
+    "import requests"
    ]
   },
   {
@@ -157,11 +147,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'chat_id': '7'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "requests.get(\"http://localhost:5000/chat/addmessage\").json()"
+    "body = {\n",
+    "    \"user_id\": 3,\n",
+    "    \"text\": \"Oh Donald that-that would be great. I am totally ready to come back to work. I—What? (He notices something through the window.) No! Wh… What are you doing?!! (Dr. Ledbetter is slowly backing away.) GET OFF MY SISTER!!!!!!!!!!!!!\"\n",
+    "}\n",
+    "headers = {\n",
+    "    \"Content-Type\": \"application/json\"\n",
+    "}\n",
+    "requests.get(\"http://localhost:5000//chat/7/addmessage?user_id=3\",json=body,headers=headers).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': [{'message': 'Oh Donald that-that would be great. I am totally ready to come back to work. I—What? (He notices something through the window.) No! Wh… What are you doing?!! (Dr. Ledbetter is slowly backing away.) GET OFF MY SISTER!!!!!!!!!!!!!',\n",
+       "   'time': 'Wed, 26 Feb 2020 23:08:30 GMT',\n",
+       "   'user_id': 3}]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.get(\"http://localhost:5000/chat/7/list\").json()"
    ]
   },
   {
